<resources>
    <string name="app_name">Safe Ride</string>
    <string name="driver">I\'m a Student Driver</string>
    <string name="customer">I\'m a Student Customer</string>
    <string name="moderator">I\'m a Moderator</string>
    <string name="gustavus_email">Gustavus email</string>
    <string name="gustavus_password">Gustavus password</string>
    <string name="login">LogIn</string>
    <string name="register">Register</string>
    <string name="welcome_page_for_app">Welcome Page</string>
    <string name="signup_page_for_drivers">The signup page for the drivers</string>
    <string name="signup_page_for_moderators">The signup page for the moderators</string>
    <string name="test_text">Make me a button of some sort</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_order">Request/Cancel Ride</string>
    <string name="drawer_item_eta">ETA</string>
    <string name="loginHeader">Login</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="destination">Destination</string>
    <string name="request_ride">Request Ride</string>
    <string name="ride_requests">Ride Requests</string>
    <string name="waiting_for_driver">Waiting For Driver</string>
    <string name="cancel_ride">Cancel Ride</string>
    <string name="accept_ride">Accept Ride</string>
    <string name="eta_placeholder">Calculating ETA…</string>
    <string name="arrivalText">Your ride has arrived</string>
    <string name="welcomeText">Welcome to Safe Rides!</string>
    <string name="navigationButton">Menu</string>
    <string name="ride_request">Ride Request</string>
    <string name="ride_acceptance">Accept Ride</string>
    <string name="waiting">Waiting for ride requests...</string>
    <string name="ETA">Estimated Time of Arrival:</string>
    <string name="ride_accepted">Ride Accepted!</string>
    <string name="start_ride">Start Ride</string>
    <string name="complete_ride">Complete Ride</string>
    <string name="estimated_time_of_arrival">"Estimated Time of Arrival: "</string>
    <string name="pickup_location_format">Pickup Location: %1$.6f, %2$.6f</string>
    <string name="destination_format">Destination: %1$.6f, %2$.6f</string>
    <string name="drawer_item_start_ride">Start Ride</string>
    <string name="ride_image">progress image</string>
</resources>