<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
    android:backgroundTint="@color/white"
    android:orientation="vertical"
    tools:context=".DriverLoginActivity">

    <TextView
        android:id="@+id/loginHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/loginHeader"
        android:textSize="50sp"
        android:textStyle="bold" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="513dp"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_marginTop="84dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/signup_page_for_drivers"
        android:src="@drawable/login_icon" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@android:drawable/editbox_dropdown_dark_frame"
            android:backgroundTint="@color/common_google_signin_btn_text_light_disabled"
            android:hint="@string/gustavus_email"
            android:textColorHint="#7E7E7E"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@android:drawable/editbox_dropdown_dark_frame"
            android:backgroundTint="@color/common_google_signin_btn_text_dark_disabled"
            android:hint="@string/gustavus_password"
            android:textColorHint="#7E7E7E"/>


        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login" />




    </LinearLayout>


</RelativeLayout>