<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        android:id="@+id/mapFragment"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/pickupLocationEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pickup_location"
            android:textColorHint="@color/black"
            android:inputType="text" />

        <EditText
            android:id="@+id/destinationEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/destination"
            android:textColorHint="@color/black"
            android:inputType="text" />

        <Button
            android:id="@+id/requestRideButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/request_ride" />

    </LinearLayout>

</RelativeLayout>